# MC937

./: .gitignore  README.md
lab01/: CMakeLists.txt  lab1.cpp  main.cpp
lab02/: CMakeLists.txt  demo3.cpp  main.cpp  teste.cpp
lab02/glad/: glad.c  glad.h
lab03/: CMakeLists.txt  cube.mtl  main.cpp  resultado.mtl  teste.cpp
piramide/: CMakeLists.txt  main.cpp
prova03/: CMakeLists.txt  aabb.cpp  main.cpp
triangulo/: CMakeLists.txt  main.cpp
